# extradite

./: .gitignore  EXTRADITE_OPTIMIZATION_PLAN.md  LICENSE  README.md  pyproject.toml
benchmarks/: extradite_performance_benchmark.py
examples/: subinterpreter_extradite_demo.py
src/extradite/: __init__.py  api.py  builder.py  errors.py  runtime.py  worker.py
src/extradite/demo/: __init__.py  benchmark_workload.py  native_dependency_workload.py
tests/: test_extradite.py  test_limitations_round3.py  test_round3_repros_pydantic_core.py
tests/fixtures/: __init__.py  sandbox_peer.py  sandbox_target.py
